style/style.css
* {
    box-sizing: border-box;
}

body {
    min-height: 100svh;
    margin: 0;
    font-family: system-ui, sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
}

h2 {
    margin-top: 0;
}

.btn {
    appearance: none;
    border: 0;
    cursor: pointer;
    padding: 0.6rem 1.2rem;
    border-radius: 6px;
}

.btn-primary {
    background-color: rgb(43, 107, 226);
    color: aliceblue;
    font-weight: bold;
}

.btn-primary:hover {
    background-color: rgb(34, 91, 197);
}

.btn-remove {
    background-color: rgb(221, 54, 54);
    color: aliceblue;
    font-weight: bold;
}

.btn-remove:hover {
    background-color: rgb(201, 47, 47);
}

.flex-btn {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 1rem;
}

dialog div {
    text-align: center;
    margin-top: 1rem;
}

::backdrop {
    backdrop-filter: blur(6px);
}

label {
    width: 65px;
    display: inline-block;
}

input {
    padding: .2rem .4rem;
}

input[type="checkbox"] {
    margin: 0;
}

.error-message-form {
    color: red;
    margin-bottom: 1rem;
}

.books-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
    grid-auto-rows: 1fr;
    gap: 1rem;
    width: 85vw;
    margin-top: 1rem;
}

.card {
    border: 1px solid rgb(163, 163, 163);
    border-radius: 6px;
    padding: 1rem;
}

